src/objects/Teller_Limits_Matrix__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Branch_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Branch No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Function_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Function Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weighting__c</fullName>
        <label>Weighting</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Teller Limits Matrix</label>
</CustomObject>